fix high contrast svg font can not be seen

--- a/vtr-ui/src/app/components/modal/modal-store-rating/modal-store-rating.component.scss
+++ b/vtr-ui/src/app/components/modal/modal-store-rating/modal-store-rating.component.scss
@@ -41,6 +41,12 @@
                 top: 4px;
                 transform: scale(0.8);
 
+                .img-chatbox{
+                    @media #{$white-on-black} {
+                        filter: invert(100%);
+                    }
+                }
+
                 .hint-icon{
                     position: absolute;
                     left: 50%;
